Work in progress -- hwloc should be able to loa...
Work in progress -- hwloc should be able to load backends (backends are not ready)

This commit was SVN r4539.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -26,7 +26,8 @@ noinst_HEADERS = \
         private/debug.h \
         private/misc.h \
         private/cpuid.h \
-		private/backend.h
+		private/backend.h \
+		private/topology.h
 
 if HWLOC_HAVE_LINUX
 include_hwloc_HEADERS += \
