correction in order to test with lstopo
This commit was SVN r4547.

--- a/src/backends/Makefile
+++ b/src/backends/Makefile
@@ -217,7 +217,7 @@ HWLOC_RELEASE_DATE = Unreleased developer copy
 HWLOC_REQUIRES = libxml-2.0 libpci 
 HWLOC_SVN_R = 
 HWLOC_TERMCAP_LIBS = 
-HWLOC_VERSION = 1.5a1r4540M
+HWLOC_VERSION = 1.5a1r4540:4546
 HWLOC_W3_GENERATOR = /usr/bin/w3m
 HWLOC_X11_LIBS = -lX11
 HWLOC_XML_LOCALIZED = 0
@@ -250,10 +250,10 @@ OTOOL64 =
 PACKAGE = hwloc
 PACKAGE_BUGREPORT = http://www.open-mpi.org/projects/hwloc/
 PACKAGE_NAME = hwloc
-PACKAGE_STRING = hwloc 1.5a1r4540M
+PACKAGE_STRING = hwloc 1.5a1r4540:4546
 PACKAGE_TARNAME = hwloc
 PACKAGE_URL = 
-PACKAGE_VERSION = 1.5a1r4540M
+PACKAGE_VERSION = 1.5a1r4540:4546
 PATH_SEPARATOR = :
 PDFLATEX = /usr/bin/pdflatex
 PKG_CONFIG = /usr/bin/pkg-config
@@ -263,7 +263,7 @@ SED_I = /bin/sed -i
 SET_MAKE = 
 SHELL = /bin/bash
 STRIP = strip
-VERSION = 1.5a1r4540M
+VERSION = 1.5a1r4540:4546
 W3M = /usr/bin/w3m
 XMKMF = 
 XMLLINT = 
