--- a/src/backends/Makefile.am
+++ b/src/backends/Makefile.am
@@ -1,5 +1,10 @@
-lib_LTLIBRARIES = libhwlocbackendsbasetopologylinux.la
+lib_LTLIBRARIES = libhwlocbackendsbasetopologylinux.la libhwlocbackendsiotopologylibpci.la
 libhwlocbackendsbasetopologylinux_la_SOURCES = hwloc_backends_base_topology-linux.c
 libhwlocbackendsbasetopologylinux_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
 libhwlocbackendsbasetopologylinux_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
 libhwlocbackendsbasetopologylinux_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
+
+libhwlocbackendsiotopologylibpci_la_SOURCES = hwloc_backends_io_topology-libpci.c
+libhwlocbackendsiotopologylibpci_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
+libhwlocbackendsiotopologylibpci_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
+libhwlocbackendsiotopologylibpci_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
