--- a/src/backends/Makefile.in
+++ b/src/backends/Makefile.in
@@ -52,6 +52,12 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
+
+#################################
+# Only compiled if HWLOC_HAVE_* #
+#################################
+@HWLOC_HAVE_LINUX_TRUE@am__append_1 = libhwlocbackendsbasetopologylinux.la
+@HWLOC_HAVE_LIBPCI_TRUE@am__append_2 = libhwlocbackendsiotopologylibpci.la
 subdir = src/backends
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(srcdir)/hwloc_backends_base_topology-linux.c
@@ -104,7 +110,9 @@ am__uninstall_files_from_dir = { \
 am__installdirs = "$(DESTDIR)$(libdir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libhwlocbackendsbasetopologylinux_la_LIBADD =
-am_libhwlocbackendsbasetopologylinux_la_OBJECTS = libhwlocbackendsbasetopologylinux_la-hwloc_backends_base_topology-linux.lo
+am__libhwlocbackendsbasetopologylinux_la_SOURCES_DIST =  \
+	hwloc_backends_base_topology-linux.c
+@HWLOC_HAVE_LINUX_TRUE@am_libhwlocbackendsbasetopologylinux_la_OBJECTS = libhwlocbackendsbasetopologylinux_la-hwloc_backends_base_topology-linux.lo
 libhwlocbackendsbasetopologylinux_la_OBJECTS =  \
 	$(am_libhwlocbackendsbasetopologylinux_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
@@ -115,8 +123,22 @@ libhwlocbackendsbasetopologylinux_la_LINK = $(LIBTOOL) $(AM_V_lt) \
 	$(CCLD) $(libhwlocbackendsbasetopologylinux_la_CFLAGS) \
 	$(CFLAGS) $(libhwlocbackendsbasetopologylinux_la_LDFLAGS) \
 	$(LDFLAGS) -o $@
+@HWLOC_HAVE_LINUX_TRUE@am_libhwlocbackendsbasetopologylinux_la_rpath =  \
+@HWLOC_HAVE_LINUX_TRUE@	-rpath $(libdir)
+libhwlocbackendsglobaltopologysynthetic_la_LIBADD =
+am_libhwlocbackendsglobaltopologysynthetic_la_OBJECTS = libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.lo
+libhwlocbackendsglobaltopologysynthetic_la_OBJECTS =  \
+	$(am_libhwlocbackendsglobaltopologysynthetic_la_OBJECTS)
+libhwlocbackendsglobaltopologysynthetic_la_LINK = $(LIBTOOL) \
+	$(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
+	--mode=link $(CCLD) \
+	$(libhwlocbackendsglobaltopologysynthetic_la_CFLAGS) $(CFLAGS) \
+	$(libhwlocbackendsglobaltopologysynthetic_la_LDFLAGS) \
+	$(LDFLAGS) -o $@
 libhwlocbackendsiotopologylibpci_la_LIBADD =
-am_libhwlocbackendsiotopologylibpci_la_OBJECTS = libhwlocbackendsiotopologylibpci_la-hwloc_backends_io_topology-libpci.lo
+am__libhwlocbackendsiotopologylibpci_la_SOURCES_DIST =  \
+	hwloc_backends_io_topology-libpci.c
+@HWLOC_HAVE_LIBPCI_TRUE@am_libhwlocbackendsiotopologylibpci_la_OBJECTS = libhwlocbackendsiotopologylibpci_la-hwloc_backends_io_topology-libpci.lo
 libhwlocbackendsiotopologylibpci_la_OBJECTS =  \
 	$(am_libhwlocbackendsiotopologylibpci_la_OBJECTS)
 libhwlocbackendsiotopologylibpci_la_LINK = $(LIBTOOL) $(AM_V_lt) \
@@ -124,6 +146,8 @@ libhwlocbackendsiotopologylibpci_la_LINK = $(LIBTOOL) $(AM_V_lt) \
 	$(CCLD) $(libhwlocbackendsiotopologylibpci_la_CFLAGS) \
 	$(CFLAGS) $(libhwlocbackendsiotopologylibpci_la_LDFLAGS) \
 	$(LDFLAGS) -o $@
+@HWLOC_HAVE_LIBPCI_TRUE@am_libhwlocbackendsiotopologylibpci_la_rpath =  \
+@HWLOC_HAVE_LIBPCI_TRUE@	-rpath $(libdir)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)/include/private/autogen -I$(top_builddir)/include/hwloc/autogen
 depcomp = $(SHELL) $(top_srcdir)/./config/depcomp
 am__depfiles_maybe = depfiles
@@ -151,9 +175,12 @@ AM_V_GEN = $(am__v_GEN_@AM_V@)
 am__v_GEN_ = $(am__v_GEN_@AM_DEFAULT_V@)
 am__v_GEN_0 = @echo "  GEN   " $@;
 SOURCES = $(libhwlocbackendsbasetopologylinux_la_SOURCES) \
+	$(libhwlocbackendsglobaltopologysynthetic_la_SOURCES) \
 	$(libhwlocbackendsiotopologylibpci_la_SOURCES)
-DIST_SOURCES = $(libhwlocbackendsbasetopologylinux_la_SOURCES) \
-	$(libhwlocbackendsiotopologylibpci_la_SOURCES)
+DIST_SOURCES =  \
+	$(am__libhwlocbackendsbasetopologylinux_la_SOURCES_DIST) \
+	$(libhwlocbackendsglobaltopologysynthetic_la_SOURCES) \
+	$(am__libhwlocbackendsiotopologylibpci_la_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -340,15 +367,24 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-lib_LTLIBRARIES = libhwlocbackendsbasetopologylinux.la libhwlocbackendsiotopologylibpci.la
-libhwlocbackendsbasetopologylinux_la_SOURCES = hwloc_backends_base_topology-linux.c
-libhwlocbackendsbasetopologylinux_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
-libhwlocbackendsbasetopologylinux_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
-libhwlocbackendsbasetopologylinux_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
-libhwlocbackendsiotopologylibpci_la_SOURCES = hwloc_backends_io_topology-libpci.c
-libhwlocbackendsiotopologylibpci_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
-libhwlocbackendsiotopologylibpci_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
-libhwlocbackendsiotopologylibpci_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
+lib_LTLIBRARIES = libhwlocbackendsglobaltopologysynthetic.la \
+	$(am__append_1) $(am__append_2)
+
+###################
+# Always compiled #
+###################
+libhwlocbackendsglobaltopologysynthetic_la_SOURCES = hwloc_backends_global_topology-synthetic.c
+libhwlocbackendsglobaltopologysynthetic_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
+libhwlocbackendsglobaltopologysynthetic_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
+libhwlocbackendsglobaltopologysynthetic_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
+@HWLOC_HAVE_LINUX_TRUE@libhwlocbackendsbasetopologylinux_la_SOURCES = hwloc_backends_base_topology-linux.c
+@HWLOC_HAVE_LINUX_TRUE@libhwlocbackendsbasetopologylinux_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
+@HWLOC_HAVE_LINUX_TRUE@libhwlocbackendsbasetopologylinux_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
+@HWLOC_HAVE_LINUX_TRUE@libhwlocbackendsbasetopologylinux_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
+@HWLOC_HAVE_LIBPCI_TRUE@libhwlocbackendsiotopologylibpci_la_SOURCES = hwloc_backends_io_topology-libpci.c
+@HWLOC_HAVE_LIBPCI_TRUE@libhwlocbackendsiotopologylibpci_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
+@HWLOC_HAVE_LIBPCI_TRUE@libhwlocbackendsiotopologylibpci_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
+@HWLOC_HAVE_LIBPCI_TRUE@libhwlocbackendsiotopologylibpci_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
 all: all-am
 
 .SUFFIXES:
@@ -416,9 +452,11 @@ clean-libLTLIBRARIES:
 	  rm -f "$${dir}/so_locations"; \
 	done
 libhwlocbackendsbasetopologylinux.la: $(libhwlocbackendsbasetopologylinux_la_OBJECTS) $(libhwlocbackendsbasetopologylinux_la_DEPENDENCIES) $(EXTRA_libhwlocbackendsbasetopologylinux_la_DEPENDENCIES) 
-	$(AM_V_CCLD)$(libhwlocbackendsbasetopologylinux_la_LINK) -rpath $(libdir) $(libhwlocbackendsbasetopologylinux_la_OBJECTS) $(libhwlocbackendsbasetopologylinux_la_LIBADD) $(LIBS)
+	$(AM_V_CCLD)$(libhwlocbackendsbasetopologylinux_la_LINK) $(am_libhwlocbackendsbasetopologylinux_la_rpath) $(libhwlocbackendsbasetopologylinux_la_OBJECTS) $(libhwlocbackendsbasetopologylinux_la_LIBADD) $(LIBS)
+libhwlocbackendsglobaltopologysynthetic.la: $(libhwlocbackendsglobaltopologysynthetic_la_OBJECTS) $(libhwlocbackendsglobaltopologysynthetic_la_DEPENDENCIES) $(EXTRA_libhwlocbackendsglobaltopologysynthetic_la_DEPENDENCIES) 
+	$(AM_V_CCLD)$(libhwlocbackendsglobaltopologysynthetic_la_LINK) -rpath $(libdir) $(libhwlocbackendsglobaltopologysynthetic_la_OBJECTS) $(libhwlocbackendsglobaltopologysynthetic_la_LIBADD) $(LIBS)
 libhwlocbackendsiotopologylibpci.la: $(libhwlocbackendsiotopologylibpci_la_OBJECTS) $(libhwlocbackendsiotopologylibpci_la_DEPENDENCIES) $(EXTRA_libhwlocbackendsiotopologylibpci_la_DEPENDENCIES) 
-	$(AM_V_CCLD)$(libhwlocbackendsiotopologylibpci_la_LINK) -rpath $(libdir) $(libhwlocbackendsiotopologylibpci_la_OBJECTS) $(libhwlocbackendsiotopologylibpci_la_LIBADD) $(LIBS)
+	$(AM_V_CCLD)$(libhwlocbackendsiotopologylibpci_la_LINK) $(am_libhwlocbackendsiotopologylibpci_la_rpath) $(libhwlocbackendsiotopologylibpci_la_OBJECTS) $(libhwlocbackendsiotopologylibpci_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -427,6 +465,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libhwlocbackendsbasetopologylinux_la-hwloc_backends_base_topology-linux.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libhwlocbackendsiotopologylibpci_la-hwloc_backends_io_topology-libpci.Plo@am__quote@
 
 .c.o:
@@ -459,6 +498,13 @@ libhwlocbackendsbasetopologylinux_la-hwloc_backends_base_topology-linux.lo: hwlo
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='hwloc_backends_base_topology-linux.c' object='libhwlocbackendsbasetopologylinux_la-hwloc_backends_base_topology-linux.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libhwlocbackendsbasetopologylinux_la_CPPFLAGS) $(CPPFLAGS) $(libhwlocbackendsbasetopologylinux_la_CFLAGS) $(CFLAGS) -c -o libhwlocbackendsbasetopologylinux_la-hwloc_backends_base_topology-linux.lo `test -f 'hwloc_backends_base_topology-linux.c' || echo '$(srcdir)/'`hwloc_backends_base_topology-linux.c
+
+libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.lo: hwloc_backends_global_topology-synthetic.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libhwlocbackendsglobaltopologysynthetic_la_CPPFLAGS) $(CPPFLAGS) $(libhwlocbackendsglobaltopologysynthetic_la_CFLAGS) $(CFLAGS) -MT libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.lo -MD -MP -MF $(DEPDIR)/libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.Tpo -c -o libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.lo `test -f 'hwloc_backends_global_topology-synthetic.c' || echo '$(srcdir)/'`hwloc_backends_global_topology-synthetic.c
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.Tpo $(DEPDIR)/libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='hwloc_backends_global_topology-synthetic.c' object='libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libhwlocbackendsglobaltopologysynthetic_la_CPPFLAGS) $(CPPFLAGS) $(libhwlocbackendsglobaltopologysynthetic_la_CFLAGS) $(CFLAGS) -c -o libhwlocbackendsglobaltopologysynthetic_la-hwloc_backends_global_topology-synthetic.lo `test -f 'hwloc_backends_global_topology-synthetic.c' || echo '$(srcdir)/'`hwloc_backends_global_topology-synthetic.c
 
 libhwlocbackendsiotopologylibpci_la-hwloc_backends_io_topology-libpci.lo: hwloc_backends_io_topology-libpci.c
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libhwlocbackendsiotopologylibpci_la_CPPFLAGS) $(CPPFLAGS) $(libhwlocbackendsiotopologylibpci_la_CFLAGS) $(CFLAGS) -MT libhwlocbackendsiotopologylibpci_la-hwloc_backends_io_topology-libpci.lo -MD -MP -MF $(DEPDIR)/libhwlocbackendsiotopologylibpci_la-hwloc_backends_io_topology-libpci.Tpo -c -o libhwlocbackendsiotopologylibpci_la-hwloc_backends_io_topology-libpci.lo `test -f 'hwloc_backends_io_topology-libpci.c' || echo '$(srcdir)/'`hwloc_backends_io_topology-libpci.c
