Work in progress -- memory correction and freeb...
Work in progress -- memory correction and freebsd backend works

This commit was SVN r4622.

--- a/src/backends/Makefile.am
+++ b/src/backends/Makefile.am
@@ -2,6 +2,8 @@ lib_LTLIBRARIES = libhwlocbackendsglobaltopologysynthetic.la
 
 ###################
 # Always compiled #
+#                 #
+# Global backends #
 ###################
 
 libhwlocbackendsglobaltopologysynthetic_la_SOURCES = hwloc_backends_global_topology-synthetic.c
@@ -13,6 +15,8 @@ libhwlocbackendsglobaltopologysynthetic_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fP
 # Only compiled if HWLOC_HAVE_* #
 #################################
 
+# Base backends #
+
 if HWLOC_HAVE_LINUX
 lib_LTLIBRARIES += libhwlocbackendsbasetopologylinux.la
 libhwlocbackendsbasetopologylinux_la_SOURCES = hwloc_backends_base_topology-linux.c
@@ -20,6 +24,16 @@ libhwlocbackendsbasetopologylinux_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
 libhwlocbackendsbasetopologylinux_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
 libhwlocbackendsbasetopologylinux_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
 endif HWLOC_HAVE_LINUX
+
+if HWLOC_HAVE_FREEBSD
+lib_LTLIBRARIES += libhwlocbackendsbasetopologyfreebsd.la
+libhwlocbackendsbasetopologyfreebsd_la_SOURCES = hwloc_backends_base_topology-freebsd.c
+libhwlocbackendsbasetopologyfreebsd_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
+libhwlocbackendsbasetopologyfreebsd_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
+libhwlocbackendsbasetopologyfreebsd_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
+endif HWLOC_HAVE_FREEBSD
+
+# IO backends #
 
 if HWLOC_HAVE_LIBPCI
 lib_LTLIBRARIES += libhwlocbackendsiotopologylibpci.la
