--- a/src/backends/Makefile.am
+++ b/src/backends/Makefile.am
@@ -1,10 +1,14 @@
-lib_LTLIBRARIES = libhwlocbackendsglobaltopologysynthetic.la
+hwlocdir = $(libdir)/hwloc
+
+hwloc_LTLIBRARIES = libhwlocbackendsglobaltopologysynthetic.la
 
 ###################
 # Always compiled #
 #                 #
 # Global backends #
 ###################
+
+# Synthetic backend #
 
 libhwlocbackendsglobaltopologysynthetic_la_SOURCES = hwloc_backends_global_topology-synthetic.c
 libhwlocbackendsglobaltopologysynthetic_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
@@ -18,7 +22,7 @@ libhwlocbackendsglobaltopologysynthetic_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fP
 # Base backends #
 
 if HWLOC_HAVE_LINUX
-lib_LTLIBRARIES += libhwlocbackendsbasetopologylinux.la
+hwloc_LTLIBRARIES += libhwlocbackendsbasetopologylinux.la
 libhwlocbackendsbasetopologylinux_la_SOURCES = hwloc_backends_base_topology-linux.c
 libhwlocbackendsbasetopologylinux_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
 libhwlocbackendsbasetopologylinux_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
@@ -26,17 +30,25 @@ libhwlocbackendsbasetopologylinux_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -mo
 endif HWLOC_HAVE_LINUX
 
 if HWLOC_HAVE_FREEBSD
-lib_LTLIBRARIES += libhwlocbackendsbasetopologyfreebsd.la
+hwloc_LTLIBRARIES += libhwlocbackendsbasetopologyfreebsd.la
 libhwlocbackendsbasetopologyfreebsd_la_SOURCES = hwloc_backends_base_topology-freebsd.c
 libhwlocbackendsbasetopologyfreebsd_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
 libhwlocbackendsbasetopologyfreebsd_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
 libhwlocbackendsbasetopologyfreebsd_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
 endif HWLOC_HAVE_FREEBSD
 
+if HWLOC_HAVE_SOLARIS
+hwloc_LTLIBRARIES += libhwlocbackendsbasetopologysolaris.la
+libhwlocbackendsbasetopologysolaris_la_SOURCES = hwloc_backends_base_topology-solaris.c hwloc_backends_base_topology-solaris-chiptype.c
+libhwlocbackendsbasetopologysolaris_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
+libhwlocbackendsbasetopologysolaris_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
+libhwlocbackendsbasetopologysolaris_la_LDFLAGS = $(HWLOC_LDLAGS) -shared -fPIC -module -avoid-version
+endif HWLOC_HAVE_SOLARIS
+
 # IO backends #
 
 if HWLOC_HAVE_LIBPCI
-lib_LTLIBRARIES += libhwlocbackendsiotopologylibpci.la
+hwloc_LTLIBRARIES += libhwlocbackendsiotopologylibpci.la
 libhwlocbackendsiotopologylibpci_la_SOURCES = hwloc_backends_io_topology-libpci.c
 libhwlocbackendsiotopologylibpci_la_CPPFLAGS = $(HWLOC_CPPFLAGS) -fPIC
 libhwlocbackendsiotopologylibpci_la_CFLAGS = $(HWLOC_CFLAGS) -fPIC
