Add a hwloc-annotate test
This commit was SVN r4757.

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -48,7 +48,7 @@ bin_SCRIPTS = hwloc-assembler-remote
 # Only run the tests if we're building standalone, because the tests
 # call hwloc executables.
 if !HWLOC_HAVE_MINGW32
-TESTS = test-hwloc-assembler.sh test-hwloc-calc.sh test-hwloc-distances.sh test-hwloc-distrib.sh test-hwloc-ls.sh
+TESTS = test-hwloc-annotate.sh test-hwloc-assembler.sh test-hwloc-calc.sh test-hwloc-distances.sh test-hwloc-distrib.sh test-hwloc-ls.sh
 endif !HWLOC_HAVE_MINGW32
 
 # Only install man pages if we're building in standalone mode
