--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -379,7 +379,10 @@ man3_conversion_DATA = \
         $(DOX_MAN_DIR)/man3/hwloc_obj_type_snprintf.3 \
         $(DOX_MAN_DIR)/man3/hwloc_obj_attr_snprintf.3 \
         $(DOX_MAN_DIR)/man3/hwloc_obj_snprintf.3 \
-        $(DOX_MAN_DIR)/man3/hwloc_obj_cpuset_snprintf.3 \
+        $(DOX_MAN_DIR)/man3/hwloc_obj_cpuset_snprintf.3
+
+man3_annotationdir = $(man3dir)
+man3_annotation_DATA = \
         $(DOX_MAN_DIR)/man3/hwloc_obj_get_info_by_name.3 \
         $(DOX_MAN_DIR)/man3/hwloc_obj_add_info.3 \
         $(DOX_MAN_DIR)/man3/hwloc_obj_add_valarray.3 \
